objects/Queue_Auto_Assign_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Manage Queue State for Auto-Assignment to membership</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Allow cases to be auto-assigned out of this queue</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignment_Priority__c</fullName>
        <inlineHelpText>Higher numbered priority are emptied/assigned out first. Allows ordering of which queues should be emptied in which order.</inlineHelpText>
        <label>Assignment Priority</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fallback_Queue_Name__c</fullName>
        <description>Used when no active/available membership can be found to complete assignment. Helps to provide guaranteed assignment.</description>
        <inlineHelpText>Must be the name of another SFDC Queue</inlineHelpText>
        <label>Fallback Queue Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overflow_Limit__c</fullName>
        <defaultValue>30</defaultValue>
        <description>Limit the adjusted number of cases an individual can receive before they are unable to receive cases from this queue. If all users available in the queue are at the overflow then we will spill over into the overflow queue specified for this queue.</description>
        <label>Overflow Limit</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overflow_Queue_Name__c</fullName>
        <description>Allow an Overflow Limit to limit the number of cases someone can be assigned in a day before cases coming out of this queue are assigned to another queue.</description>
        <label>Overflow Queue Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Queue Auto-Assign Settings</label>
</CustomObject>